# shard

./: .gitignore  README.md  pyproject.toml
docs/: spec.md
shard/: cli.py  generate.py  manifest.py  nfconfig.py  pack.py  shardspec.py  validate.py
tests/: test_generate.py  test_manifest.py  test_nfconfig.py  test_shardspec.py  test_validate.py
